include/trax.h

/**
 * A trax image data structure. Use trax_image_* functions to access the data.
**/
typedef struct trax_image {
    short type;
    int width;
    int height;
    int format;
    char* data;
} trax_image;
/**
 * A placeholder for region structure. Use the trax_region_* functions to manipulate
 * the data.
**/
typedef void trax_region;
/**
 * A placeholder for properties structure. Use the trax_properties_* functions to manipulate
 * the data.
**/
typedef struct trax_properties trax_properties;
/**
 * A placeholder for object list structure. Use the trax_object_list_* functions to manipulate
 * the data.
**/
typedef struct trax_object_list {
    int size;
    trax_region** regions;
    trax_properties** properties; 
} trax_object_list;
typedef struct trax_bounds {

    float top;
    float bottom;
    float left;
    float right;

} trax_bounds;
typedef void(*trax_enumerator)(const char *key, const char *value, const void *obj);
/**
 * Array for keeping images (RGB, Depth, IR)
**/
typedef struct trax_image_list {
    trax_image* images[TRAX_CHANNELS];
} trax_image_list;
/**
 * Creates a mask region object for a given amout of points. Note that the mask data is not initialized.
**/
__TRAX_EXPORT trax_region* trax_region_create_mask(int x, int y, int width, int height);
/**
 * Returns the header data of a mask region.
**/
__TRAX_EXPORT void trax_region_get_mask_header(const trax_region* region, int* x, int* y, int* width, int* height);
/**
 * Returns a pointer for a writeable row in a data array of a mask.
**/
__TRAX_EXPORT char* trax_region_write_mask_row(trax_region* region, int row);
/**
 * Returns a read-only pointer for a row in a data array of a mask.
**/
__TRAX_EXPORT const char* trax_region_get_mask_row(const trax_region* region, int row);
/**
 * Calculates a bounding box region that bounds the input region.
 **/
__TRAX_EXPORT trax_bounds trax_region_bounds(const trax_region* region);
/**
 * Calculates if the region contains a given point.
 **/
__TRAX_EXPORT int trax_region_contains(const trax_region* region, float x, float y);
/**
 * Clones a region object.
 **/
__TRAX_EXPORT trax_region* trax_region_clone(const trax_region* region);
/**
 * Converts region between different formats (if possible).
 **/
__TRAX_EXPORT trax_region* trax_region_convert(const trax_region* region, int format);
/**
 * Calculates the spatial Jaccard index for two regions (overlap).
 **/
__TRAX_EXPORT float trax_region_overlap(const trax_region* a, const trax_region* b, const trax_bounds bounds);
/**
 * Encodes a region object to a string representation.
 **/
__TRAX_EXPORT char* trax_region_encode(const trax_region* region);
/**
 * Decodes string representation of a region to an object.
 **/
__TRAX_EXPORT trax_region* trax_region_decode(const char* data);
/**
* Allocate memory for storing multi object data.
**/
__TRAX_EXPORT trax_object_list* trax_object_list_create(int count);
/**
 * Destroy a object list object and clean up the memory, this also releases all objects.
 **/
__TRAX_EXPORT void trax_object_list_release(trax_object_list** list);
/**
 * Set a region of an object in a list. 
 **/
__TRAX_EXPORT void trax_object_list_set(trax_object_list* list, int index, trax_region* region);
/**
 * Set a region of an object in a list.
 **/
__TRAX_EXPORT trax_region* trax_object_list_get(trax_object_list* list, int index);
/**
 * Retrieve pointer to properties of a specific object in list.
 **/
__TRAX_EXPORT trax_properties* trax_object_list_properties(trax_object_list* list, int index);
/**
 * Get a number of objects in a list.
 **/
__TRAX_EXPORT int trax_object_list_count(const trax_object_list* list);
/**
 * Append one object list to another.
 **/
__TRAX_EXPORT int trax_object_list_append(trax_object_list* list, const trax_object_list* src);
/**
 * Destroy a properties object and clean up the memory.
 **/
__TRAX_EXPORT void trax_properties_release(trax_properties** properties);
/**
 * Clear a properties object.
 **/
__TRAX_EXPORT void trax_properties_clear(trax_properties* properties);
/**
 * Create a property object.
 **/
__TRAX_EXPORT trax_properties* trax_properties_create();
/**
 * Create a property object using values from extisting property object.
 **/
__TRAX_EXPORT trax_properties* trax_properties_copy(const trax_properties* original);
/**
 * Returns non-zero value if the entry exits and zero otherwise.
 **/
__TRAX_EXPORT int trax_properties_has(const trax_properties* properties, const char* key);
/**
 * Set a string property (the value string is cloned).
 **/
__TRAX_EXPORT void trax_properties_set(trax_properties* properties, const char* key, const char* value);
/**
 * Set an integer property. The value will be encoded as a string.
 **/
__TRAX_EXPORT void trax_properties_set_int(trax_properties* properties, const char* key, int value);
/**
 * Set a floating point value property. The value will be encoded as a string.
 **/
__TRAX_EXPORT void trax_properties_set_float(trax_properties* properties, const char* key, float value);
/**
 * Get a string property. The resulting string is a clone of the one stored so it should
 * be released when not needed anymore.
 **/
__TRAX_EXPORT char* trax_properties_get(const trax_properties* properties, const char* key);
/**
 * Get an integer property. A stored string value is converted to an integer. If this is not possible
 * or the property does not exist a given default value is returned.
 **/
__TRAX_EXPORT int trax_properties_get_int(const trax_properties* properties, const char* key, int def);
/**
 * Get a floating point value property. A stored string value is converted to an integer. If this is not possible
 * or the property does not exist a given default value is returned.
 **/
__TRAX_EXPORT float trax_properties_get_float(const trax_properties* properties, const char* key, float def);
/**
 * Get a number of all pairs in the properties object.
 **/
__TRAX_EXPORT int trax_properties_count(const trax_properties* properties);
/**
 * Iterate over the property set using a callback function. An optional pointer can be given and is forwarded
 * to the callback.
 **/
__TRAX_EXPORT void trax_properties_enumerate(const trax_properties* properties, trax_enumerator enumerator, const void* object);
/**
 * Append all properties from source to drain, optionally overwriting existing properties with same keys.
 **/
__TRAX_EXPORT void trax_properties_append(const trax_properties* source, trax_properties* drain, int overwrite);
/**
* Allocate memory for storing the input images
**/
__TRAX_EXPORT trax_image_list* trax_image_list_create();
/**
* Release image list structure, does not release any channel images
**/
__TRAX_EXPORT void trax_image_list_release(trax_image_list** list);
/**
* Cleans image list, releases all allocated channel images
**/
__TRAX_EXPORT void trax_image_list_clear(trax_image_list* list);
/**
* Get image at a specific channel
**/
__TRAX_EXPORT trax_image* trax_image_list_get(const trax_image_list* list, int channel);
/**
* Set image at a specific channel
**/
__TRAX_EXPORT void trax_image_list_set(trax_image_list* list, trax_image* image, int channel);
/**
* Size of the image list
**/
__TRAX_EXPORT int trax_image_list_count(int channels);