support/python/trax/_ctypes.py


# /home/lukacu/Checkouts/vot/trax/include/trax.h: 463
if _libs["trax"].has("trax_region_create_mask", "cdecl"):
    trax_region_create_mask = _libs["trax"].get("trax_region_create_mask", "cdecl")
    trax_region_create_mask.argtypes = [c_int, c_int, c_int, c_int]
    trax_region_create_mask.restype = ctypes.c_void_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 468
if _libs["trax"].has("trax_region_get_mask_header", "cdecl"):
    trax_region_get_mask_header = _libs["trax"].get("trax_region_get_mask_header", "cdecl")
    trax_region_get_mask_header.argtypes = [ctypes.c_void_p, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]
    trax_region_get_mask_header.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 473
if _libs["trax"].has("trax_region_write_mask_row", "cdecl"):
    trax_region_write_mask_row = _libs["trax"].get("trax_region_write_mask_row", "cdecl")
    trax_region_write_mask_row.argtypes = [ctypes.c_void_p, c_int]
    trax_region_write_mask_row.restype = POINTER(ctypes.c_char)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 478
if _libs["trax"].has("trax_region_get_mask_row", "cdecl"):
    trax_region_get_mask_row = _libs["trax"].get("trax_region_get_mask_row", "cdecl")
    trax_region_get_mask_row.argtypes = [ctypes.c_void_p, c_int]
    trax_region_get_mask_row.restype = POINTER(ctypes.c_char)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 483
if _libs["trax"].has("trax_region_bounds", "cdecl"):
    trax_region_bounds = _libs["trax"].get("trax_region_bounds", "cdecl")
    trax_region_bounds.argtypes = [ctypes.c_void_p]
    trax_region_bounds.restype = trax_bounds

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 488
if _libs["trax"].has("trax_region_contains", "cdecl"):
    trax_region_contains = _libs["trax"].get("trax_region_contains", "cdecl")
    trax_region_contains.argtypes = [ctypes.c_void_p, c_float, c_float]
    trax_region_contains.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 493
if _libs["trax"].has("trax_region_clone", "cdecl"):
    trax_region_clone = _libs["trax"].get("trax_region_clone", "cdecl")
    trax_region_clone.argtypes = [ctypes.c_void_p]
    trax_region_clone.restype = ctypes.c_void_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 498
if _libs["trax"].has("trax_region_convert", "cdecl"):
    trax_region_convert = _libs["trax"].get("trax_region_convert", "cdecl")
    trax_region_convert.argtypes = [ctypes.c_void_p, c_int]
    trax_region_convert.restype = ctypes.c_void_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 503
if _libs["trax"].has("trax_region_overlap", "cdecl"):
    trax_region_overlap = _libs["trax"].get("trax_region_overlap", "cdecl")
    trax_region_overlap.argtypes = [ctypes.c_void_p, ctypes.c_void_p, trax_bounds]
    trax_region_overlap.restype = c_float

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 508
if _libs["trax"].has("trax_region_encode", "cdecl"):
    trax_region_encode = _libs["trax"].get("trax_region_encode", "cdecl")
    trax_region_encode.argtypes = [ctypes.c_void_p]
    trax_region_encode.restype = POINTER(ctypes.c_char)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 513
if _libs["trax"].has("trax_region_decode", "cdecl"):
    trax_region_decode = _libs["trax"].get("trax_region_decode", "cdecl")
    trax_region_decode.argtypes = [ctypes.c_char_p]
    trax_region_decode.restype = ctypes.c_void_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 518
if _libs["trax"].has("trax_object_list_create", "cdecl"):
    trax_object_list_create = _libs["trax"].get("trax_object_list_create", "cdecl")
    trax_object_list_create.argtypes = [c_int]
    trax_object_list_create.restype = POINTER(trax_object_list)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 523
if _libs["trax"].has("trax_object_list_release", "cdecl"):
    trax_object_list_release = _libs["trax"].get("trax_object_list_release", "cdecl")
    trax_object_list_release.argtypes = [POINTER(POINTER(trax_object_list))]
    trax_object_list_release.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 528
if _libs["trax"].has("trax_object_list_set", "cdecl"):
    trax_object_list_set = _libs["trax"].get("trax_object_list_set", "cdecl")
    trax_object_list_set.argtypes = [POINTER(trax_object_list), c_int, ctypes.c_void_p]
    trax_object_list_set.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 533
if _libs["trax"].has("trax_object_list_get", "cdecl"):
    trax_object_list_get = _libs["trax"].get("trax_object_list_get", "cdecl")
    trax_object_list_get.argtypes = [POINTER(trax_object_list), c_int]
    trax_object_list_get.restype = ctypes.c_void_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 538
if _libs["trax"].has("trax_object_list_properties", "cdecl"):
    trax_object_list_properties = _libs["trax"].get("trax_object_list_properties", "cdecl")
    trax_object_list_properties.argtypes = [POINTER(trax_object_list), c_int]
    trax_object_list_properties.restype = POINTER(trax_properties)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 543
if _libs["trax"].has("trax_object_list_count", "cdecl"):
    trax_object_list_count = _libs["trax"].get("trax_object_list_count", "cdecl")
    trax_object_list_count.argtypes = [POINTER(trax_object_list)]
    trax_object_list_count.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 548
if _libs["trax"].has("trax_object_list_append", "cdecl"):
    trax_object_list_append = _libs["trax"].get("trax_object_list_append", "cdecl")
    trax_object_list_append.argtypes = [POINTER(trax_object_list), POINTER(trax_object_list)]
    trax_object_list_append.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 553
if _libs["trax"].has("trax_properties_release", "cdecl"):
    trax_properties_release = _libs["trax"].get("trax_properties_release", "cdecl")
    trax_properties_release.argtypes = [POINTER(POINTER(trax_properties))]
    trax_properties_release.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 558
if _libs["trax"].has("trax_properties_clear", "cdecl"):
    trax_properties_clear = _libs["trax"].get("trax_properties_clear", "cdecl")
    trax_properties_clear.argtypes = [POINTER(trax_properties)]
    trax_properties_clear.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 563
if _libs["trax"].has("trax_properties_create", "cdecl"):
    trax_properties_create = _libs["trax"].get("trax_properties_create", "cdecl")
    trax_properties_create.argtypes = []
    trax_properties_create.restype = POINTER(trax_properties)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 568
if _libs["trax"].has("trax_properties_copy", "cdecl"):
    trax_properties_copy = _libs["trax"].get("trax_properties_copy", "cdecl")
    trax_properties_copy.argtypes = [POINTER(trax_properties)]
    trax_properties_copy.restype = POINTER(trax_properties)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 573
if _libs["trax"].has("trax_properties_has", "cdecl"):
    trax_properties_has = _libs["trax"].get("trax_properties_has", "cdecl")
    trax_properties_has.argtypes = [POINTER(trax_properties), ctypes.c_char_p]
    trax_properties_has.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 578
if _libs["trax"].has("trax_properties_set", "cdecl"):
    trax_properties_set = _libs["trax"].get("trax_properties_set", "cdecl")
    trax_properties_set.argtypes = [POINTER(trax_properties), ctypes.c_char_p, ctypes.c_char_p]
    trax_properties_set.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 583
if _libs["trax"].has("trax_properties_set_int", "cdecl"):
    trax_properties_set_int = _libs["trax"].get("trax_properties_set_int", "cdecl")
    trax_properties_set_int.argtypes = [POINTER(trax_properties), ctypes.c_char_p, c_int]
    trax_properties_set_int.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 588
if _libs["trax"].has("trax_properties_set_float", "cdecl"):
    trax_properties_set_float = _libs["trax"].get("trax_properties_set_float", "cdecl")
    trax_properties_set_float.argtypes = [POINTER(trax_properties), ctypes.c_char_p, c_float]
    trax_properties_set_float.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 594
if _libs["trax"].has("trax_properties_get", "cdecl"):
    trax_properties_get = _libs["trax"].get("trax_properties_get", "cdecl")
    trax_properties_get.argtypes = [POINTER(trax_properties), ctypes.c_char_p]
    trax_properties_get.restype = ctypes.c_char_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 600
if _libs["trax"].has("trax_properties_get_int", "cdecl"):
    trax_properties_get_int = _libs["trax"].get("trax_properties_get_int", "cdecl")
    trax_properties_get_int.argtypes = [POINTER(trax_properties), ctypes.c_char_p, c_int]
    trax_properties_get_int.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 606
if _libs["trax"].has("trax_properties_get_float", "cdecl"):
    trax_properties_get_float = _libs["trax"].get("trax_properties_get_float", "cdecl")
    trax_properties_get_float.argtypes = [POINTER(trax_properties), ctypes.c_char_p, c_float]
    trax_properties_get_float.restype = c_float

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 611
if _libs["trax"].has("trax_properties_count", "cdecl"):
    trax_properties_count = _libs["trax"].get("trax_properties_count", "cdecl")
    trax_properties_count.argtypes = [POINTER(trax_properties)]
    trax_properties_count.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 617
if _libs["trax"].has("trax_properties_enumerate", "cdecl"):
    trax_properties_enumerate = _libs["trax"].get("trax_properties_enumerate", "cdecl")
    trax_properties_enumerate.argtypes = [POINTER(struct_trax_properties), trax_enumerator, ctypes.py_object]
    trax_properties_enumerate.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 622
if _libs["trax"].has("trax_properties_append", "cdecl"):
    trax_properties_append = _libs["trax"].get("trax_properties_append", "cdecl")
    trax_properties_append.argtypes = [POINTER(trax_properties), POINTER(trax_properties), c_int]
    trax_properties_append.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 627
if _libs["trax"].has("trax_image_list_create", "cdecl"):
    trax_image_list_create = _libs["trax"].get("trax_image_list_create", "cdecl")
    trax_image_list_create.argtypes = []
    trax_image_list_create.restype = POINTER(trax_image_list)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 632
if _libs["trax"].has("trax_image_list_release", "cdecl"):
    trax_image_list_release = _libs["trax"].get("trax_image_list_release", "cdecl")
    trax_image_list_release.argtypes = [POINTER(POINTER(trax_image_list))]
    trax_image_list_release.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 637
if _libs["trax"].has("trax_image_list_clear", "cdecl"):
    trax_image_list_clear = _libs["trax"].get("trax_image_list_clear", "cdecl")
    trax_image_list_clear.argtypes = [POINTER(trax_image_list)]
    trax_image_list_clear.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 642
if _libs["trax"].has("trax_image_list_get", "cdecl"):
    trax_image_list_get = _libs["trax"].get("trax_image_list_get", "cdecl")
    trax_image_list_get.argtypes = [POINTER(trax_image_list), c_int]
    trax_image_list_get.restype = POINTER(trax_image)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 647
if _libs["trax"].has("trax_image_list_set", "cdecl"):
    trax_image_list_set = _libs["trax"].get("trax_image_list_set", "cdecl")
    trax_image_list_set.argtypes = [POINTER(trax_image_list), POINTER(trax_image), c_int]
    trax_image_list_set.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 652
if _libs["trax"].has("trax_image_list_count", "cdecl"):
    trax_image_list_count = _libs["trax"].get("trax_image_list_count", "cdecl")
    trax_image_list_count.argtypes = [c_int]
    trax_image_list_count.restype = c_int
